caching and Redis Implementation